# spec-code-ai-reviewer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  PLAN.md  README.md  README_ja.md  SECURITY.md  add_line_numbers.py  dev.ecosystem.config.js  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.js  latest  pyproject.toml
add-line-numbers/: README.md  README_ja.md  pyproject.toml  spec.md  test.py
docs/: 20260118-v0.6.0-frontend-migration-plan.md  20260118add-presets-sql-openapi.md  20260118preset-library-plan.md  20260122-markdown-organizer-plan.md  20260125-word-support-plan.md  20260126modularization_plan.md  ec2-deployment-spec.md  preset-library-plan.md
docs/assets/: README.md
excel2md/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ja.md  SECURITY.md  pyproject.toml
excel2md/v1.7/: verify_csv_markdown.py
excel2md/v1.7/tests/: conftest.py  test_hyperlink.py
excel2md/v1.8/: excel_to_md.py  verify_csv_markdown.py
excel2md/v1.8/tests/: test_cell_utils.py  test_csv_markdown.py  test_markdown_output.py  test_table_detection.py
excel2md/v2.0/: excel_to_md.py  spec.md  spec_appendix.md
excel2md/v2.0/excel2md/: __init__.py  cell_utils.py  cli.py  csv_export.py  image_extraction.py  mermaid_generator.py  runner.py  table_detection.py  table_extraction.py  workbook_loader.py
excel2md/v2.0/tests/: __init__.py  conftest.py  test_cell_utils.py  test_csv_markdown.py  test_hyperlink.py  test_markdown_output.py  test_table_detection.py
nginx/: dev.conf  spec-code-ai-reviewer.conf  version-map.conf
scripts/: sync_version.py
tests/: 20260118001試験項目表.md  README.md
v1.7/: excel_to_md.py  spec.md
v1.7/tests/: __init__.py  test_mermaid.py
v1.8/: spec.md
v1.8/tests/: test_image_extraction.py
v2.0/: verify_csv_markdown.py
v2.0/excel2md/: output.py  table_formatting.py
v2.0/tests/: test_image_extraction.py  test_mermaid.py
versions/: README.md
versions/v0.5.0/: config-file-generator-spec.md  spec.md
versions/v0.5.0/backend/: pyproject.toml
versions/v0.5.1/: config-file-generator-spec.md
versions/v0.5.2/: config-file-generator-spec.md  spec.md
versions/v0.6.0/: config-file-generator-spec.md  spec.md
versions/v0.6.0/backend/: pyproject.toml
versions/v0.6.0/backend/app/markdown_tools/: __init__.py
versions/v0.6.0/backend/app/routers/: review.py
versions/v0.6.0/backend/app/services/: anthropic_service.py  llm_service.py
versions/v0.6.0/backend/tests/: conftest.py  test_schemas.py
versions/v0.7.0/: config-file-generator-spec.md  spec.md
(+165 files in other folders)
